--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,6 @@ div > div > h1 {
 
 #testimonials {
     background-color: #ef8172;
-    padding: 7% 15%;
     text-align: center;
     color: white;
 }
@@ -72,6 +71,10 @@ div > div > h1 {
     border-radius: 50%;
     width: 10%;
     margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
 }
 
 #press {
