--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ div > div > h1 {
     color: white;
 }
 
-#testimonials h2 {
+h2 {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 3rem;
@@ -111,7 +111,16 @@ div > div > h1 {
     font-size: 1.2rem;
 }
 
+/* Seção de Preço */
 
+#preco {
+    padding: 100px;
+    text-align: center;
+}
+
+.preco-column {
+    padding: 3% 2%;
+}
 
 /* Botão de Download */
 
