--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,16 @@ h2 {
 
 /* Media Query */
 
-@media screen and (max-width: 767px){
+@media screen and (min-width: 500px) and (max-width: 900px){
+    #title {
+        text-align: center;
+    }
+
+    .imagem-cabecalho {
+        left: 0px;
+
+    }
+
     #features h3 {
         font-size: 1.7rem;
         font-weight: bolder;
