--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ h2 {
 
 /* Media Query */
 
-@media screen and (min-width: 500px) and (max-width: 900px){
+@media screen and (max-width: 900px){
     #title {
         text-align: center;
     }
