--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,35 @@ h2 {
     z-index: 0;
 }
 
+#cta {
+    text-align: center;
+    background-color: #ff4c68;
+    padding: 70px;
+}
+
+#cta h3 {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    font-size: 2rem;
+    line-height: 1.5;
+    color: white;
+    padding: 20px;
+}
+
+footer {
+    text-align: center;
+    padding: 70px;
+}
+
+footer a {
+    color: black;
+    padding: 10px;
+}
+
+footer p {
+    padding: 20px;
+}
+
 /* Media Query */
 
 @media screen and (max-width: 900px){
